Revert "Fixed alignment in recommendations"
This reverts commit b4474f5fd3f845c45ddcf4675abd73aa2606ef94.

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -81,7 +81,6 @@
 .locations-wrapper {
     display:inline-block;
     margin-bottom: -2.5em;
-	width: 100%;
 }
 
 input[type=checkbox].css-checkbox {
